Check in .idea files not in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,12 @@
 /overrides.properties
-target/
+/target/
 .flattened-pom.xml
 log.jsonl
 node_modules
 venv
 
-# Exclude local Maven repository used for integration tests
-# (will be generated when running mvn verify)
-local-maven-repo/
-
 # All IntelliJ
-.idea
+.idea/*
 *.iml
 *.ipr
 *.iws
@@ -22,13 +18,11 @@ atlassian-ide-plugin.xml
 !.idea/codeStyles/Project.xml
 !.idea/encodings.xml
 !.idea/externalDependencies.xml
+!.idea/jarRepositories.xml
 !.idea/kotlinc.xml
 !.idea/ktfmt.xml
 !.idea/sqldialects.xml
 !.idea/vcs.xml
-
-# Exclude example test directory, which we use to create examples for docstrings
-/src/test/kotlin/no/liflig/logging/example
 
 # Created by https://www.toptal.com/developers/gitignore/api/vim,java,linux,macos,maven,kotlin,windows
 # Edit at https://www.toptal.com/developers/gitignore?templates=vim,java,linux,macos,maven,kotlin,windows
