--- a/liflig-messaging-api/pom.xml
+++ b/liflig-messaging-api/pom.xml
@@ -3,6 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <parent>
     <groupId>no.liflig</groupId>
     <artifactId>liflig-messaging</artifactId>
@@ -10,25 +11,9 @@
     <relativePath>../pom.xml</relativePath>
   </parent>
 
-
-  <artifactId>messaging-sqs-lambda</artifactId>
-
   <properties>
     <maven.deploy.skip>false</maven.deploy.skip>
-
-    <!-- Aws -->
-    <aws-lambda-events.version>3.14.0</aws-lambda-events.version>
   </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>no.liflig</groupId>
-      <artifactId>messaging-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.amazonaws</groupId>
-      <artifactId>aws-lambda-java-events</artifactId>
-      <version>${aws-lambda-events.version}</version>
-    </dependency>
-  </dependencies>
+  <artifactId>liflig-messaging-api</artifactId>
 </project>
