Improve README and POM descriptions

--- a/liflig-messaging-awssdk/pom.xml
+++ b/liflig-messaging-awssdk/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
@@ -12,6 +12,10 @@
   </parent>
 
   <artifactId>liflig-messaging-awssdk</artifactId>
+  <description>
+    Implements the Queue interface for AWS SQS and the Topic interface for AWS SNS, using the AWS
+    SDK.
+  </description>
 
   <properties>
     <maven.deploy.skip>false</maven.deploy.skip>
