--- a/liflig-messaging-api/pom.xml
+++ b/liflig-messaging-api/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
@@ -10,6 +10,11 @@
     <version>${revision}</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
+
+  <description>
+    Provides Queue, Topic and MessageProcessor interfaces, as well as a MessagePoller class for
+    polling messages from a queue.
+  </description>
 
   <properties>
     <maven.deploy.skip>false</maven.deploy.skip>
