--- a/liflig-messaging-sqs-lambda/pom.xml
+++ b/liflig-messaging-sqs-lambda/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
@@ -10,13 +10,17 @@
     <relativePath>../pom.xml</relativePath>
   </parent>
 
-
   <artifactId>liflig-messaging-sqs-lambda</artifactId>
+  <description>
+    Provides a function for processing messages in AWS Lambda functions that use SQS as the event
+    source. It improves failure handling for individual messages in a batch, and allows you to use
+    the same MessageProcessor interface as in long-running services.
+  </description>
 
   <properties>
     <maven.deploy.skip>false</maven.deploy.skip>
 
-    <!-- Aws -->
+    <!-- AWS -->
     <aws-lambda-events.version>3.14.0</aws-lambda-events.version>
   </properties>
 
