Add MessagePollerTest in messaging-api

--- a/liflig-messaging-api/pom.xml
+++ b/liflig-messaging-api/pom.xml
@@ -19,6 +19,14 @@
   <properties>
     <maven.deploy.skip>false</maven.deploy.skip>
   </properties>
+  <dependencies>
+    <!--    Test-->
+    <dependency>
+      <groupId>org.awaitility</groupId>
+      <artifactId>awaitility</artifactId>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 
   <artifactId>liflig-messaging-api</artifactId>
 </project>
