Rename module liflig-messaging-api -> liflig-messaging-core
3 reasons:
- This module is more than just interfaces (APIs), as it also provides
  the `MessagePoller` and observer classes with actual behavior.
- Using the term "API" here may be confused with HTTP APIs, especially
  since we're talking about server-side message processing.
- Using "core" as a suffix for the core module in a library appears to
  be a convention in the Java ecosystem. For example, Flyway and JDBI
  both have "core" modules.

--- a/liflig-messaging-awssdk/pom.xml
+++ b/liflig-messaging-awssdk/pom.xml
@@ -44,7 +44,7 @@
   <dependencies>
     <dependency>
       <groupId>no.liflig</groupId>
-      <artifactId>liflig-messaging-api</artifactId>
+      <artifactId>liflig-messaging-core</artifactId>
     </dependency>
 
     <!-- AWS -->
@@ -56,7 +56,8 @@
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>sns</artifactId>
     </dependency>
-    <!--  Test-->
+
+    <!--  Test -->
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>localstack</artifactId>
@@ -68,8 +69,5 @@
       <artifactId>awaitility</artifactId>
       <scope>test</scope>
     </dependency>
-
-
   </dependencies>
-
 </project>
