--- a/liflig-messaging-sqs-lambda/pom.xml
+++ b/liflig-messaging-sqs-lambda/pom.xml
@@ -3,6 +3,7 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <parent>
     <groupId>no.liflig</groupId>
     <artifactId>liflig-messaging</artifactId>
@@ -27,8 +28,9 @@
   <dependencies>
     <dependency>
       <groupId>no.liflig</groupId>
-      <artifactId>liflig-messaging-api</artifactId>
+      <artifactId>liflig-messaging-core</artifactId>
     </dependency>
+
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-lambda-java-events</artifactId>
