--- a/liflig-messaging-awssdk/pom.xml
+++ b/liflig-messaging-awssdk/pom.xml
@@ -20,12 +20,15 @@
   <properties>
     <maven.deploy.skip>false</maven.deploy.skip>
 
-    <!--    AWS-->
+    <!-- AWS-->
     <aws-sdk.version>2.29.14</aws-sdk.version>
 
-    <!--    Test-->
+    <!-- Test-->
     <localstack.version>1.20.6</localstack.version>
 
+    <!-- Transitive dependencies (must specify these for Maven Enforcer) -->
+    <commons-codec.version>1.18.0</commons-codec.version>
+    <httpcomponents.version>4.4.16</httpcomponents.version>
   </properties>
 
   <dependencyManagement>
@@ -37,6 +40,18 @@
         <version>${aws-sdk.version}</version>
         <type>pom</type>
         <scope>import</scope>
+      </dependency>
+
+      <!-- Transitive dependencies (must specify these for Maven Enforcer) -->
+      <dependency>
+        <groupId>commons-codec</groupId>
+        <artifactId>commons-codec</artifactId>
+        <version>${commons-codec.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpcore</artifactId>
+        <version>${httpcomponents.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -57,16 +72,11 @@
       <artifactId>sns</artifactId>
     </dependency>
 
-    <!--  Test -->
+    <!-- Testing -->
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>localstack</artifactId>
       <version>${localstack.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.awaitility</groupId>
-      <artifactId>awaitility</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
