--- a/liflig-messaging-sqs-lambda/pom.xml
+++ b/liflig-messaging-sqs-lambda/pom.xml
@@ -31,6 +31,7 @@
       <artifactId>liflig-messaging-core</artifactId>
     </dependency>
 
+    <!-- Liflig -->
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-lambda-java-events</artifactId>
