--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
 
   <name>liflig-messaging</name>
   <description>
-    Provides message queue and topic services, a message poller, and a message processor interface
-    for applications that process events asynchronously.
+    Library for applications that process messages asynchronously. Provides interfaces and
+    implementations for message queues, topics, pollers and processors.
   </description>
 
   <modules>
