--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>no.liflig</groupId>
     <artifactId>kotlin-parent</artifactId>
-    <version>3.20250914.100506</version>
+    <version>3.20251016.053254</version>
   </parent>
 
   <!--suppress MavenRedundantGroupId -->
@@ -51,25 +51,28 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
+    <!-- Required by JUnit 6 -->
+    <java.version>17</java.version>
+
     <!-- Logging -->
     <slf4j.version>2.0.17</slf4j.version>
-    <logback.version>1.5.18</logback.version>
+    <logback.version>1.5.19</logback.version>
     <logstash-logback-encoder.version>8.1</logstash-logback-encoder.version>
-    <liflig-logging.version>2.20250907.165744</liflig-logging.version>
+    <liflig-logging.version>2.20251016.073034</liflig-logging.version>
 
     <!-- Serialization -->
     <kotlinx-serialization.version>1.8.0</kotlinx-serialization.version>
     <jackson.version>2.18.3</jackson.version>
 
     <!-- Testing -->
-    <junit.version>5.13.4</junit.version>
-    <kotest.version>6.0.3</kotest.version>
+    <junit.version>6.0.0</junit.version>
+    <kotest.version>6.0.4</kotest.version>
     <awaitility.version>4.3.0</awaitility.version>
 
     <!-- Maven plugins -->
     <maven-dependency-plugin.version>3.8.1</maven-dependency-plugin.version>
     <exec-maven-plugin.version>3.5.0</exec-maven-plugin.version>
-    <flatten-maven-plugin.version>1.7.2</flatten-maven-plugin.version>
+    <flatten-maven-plugin.version>1.7.3</flatten-maven-plugin.version>
   </properties>
 
   <dependencyManagement>
@@ -179,6 +182,7 @@
         <artifactId>kotlin-maven-plugin</artifactId>
         <version>${kotlin.version}</version>
         <configuration>
+          <jvmTarget>${java.version}</jvmTarget>
           <args>
             <!-- Require explicit public modifiers, to avoid accidentally publishing internal APIs -->
             <arg>-Xexplicit-api=strict</arg>
